--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
+        "driftingly/rector-laravel": "^1.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.14",
         "laravel/sail": "^1.26",
@@ -17,6 +18,7 @@
         "nunomaduro/collision": "^8.0",
         "pestphp/pest": "^2.34",
         "pestphp/pest-plugin-laravel": "^2.3",
+        "rector/rector": "^1.0",
         "spatie/laravel-ignition": "^2.4",
         "spatie/laravel-ray": "^1.35"
     },
