--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,29 @@
 {
-    "name": "laravel/laravel",
+    "name": "kapersoft/kaper.dev",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "Proxy for @kapersoft Pinkary profile.",
+    "keywords": [
+        "pinkary",
+        "kapersoft"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "php": "^8.3",
+        "laravel/framework": "^11.0"
     },
     "require-dev": {
         "driftingly/rector-laravel": "^1.0",
-        "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.14",
-        "laravel/sail": "^1.26",
-        "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.0",
-        "pestphp/pest": "^2.34",
+        "nunomaduro/collision": "^8.1",
+        "pestphp/pest": "^2.34.1",
         "pestphp/pest-plugin-laravel": "^2.3",
-        "rector/rector": "^1.0",
-        "spatie/laravel-ignition": "^2.4",
-        "spatie/laravel-ray": "^1.35"
+        "rector/rector": "^1.0.1",
+        "spatie/laravel-ignition": "^2.4.2",
+        "spatie/laravel-ray": "^1.35.1"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
